GH-865 Use same error response format as EDDIE